# ywp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
assets/: circular-demo.avif  spline-demo.avif
shaders/: circular.frag  spline.frag  spline.vert
src/: main.c  platform.c  platform.h  shader.c  shader.h
